# rust-enumeration

./: Cargo.toml  LICENSE  README.md
src/: bitmask.rs  enumeration.rs  helper.rs  lib.rs  macros.rs  variant.rs
tests/: test.rs
