[package]
name = "enumeration"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "An extension to rust enum"
homepage = "https://github.com/feois/rust-enumeration"
repository = "https://github.com/feois/rust-enumeration"
keywords = ["enum", "enumeration"]
categories = ["development-tools", "rust-patterns"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
